--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "less-middleware": "~2.2.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
-  }
+  },
+  "postinstall":"ionic build ./ionic/ionic-test/"
 }
