--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.15.5",
     "less-middleware": "~2.2.1",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "ionic":"*"
   },
   "postinstall":"ionic build ./ionic/ionic-test/"
 }
