--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
     "serve-favicon": "~2.4.5",
     "ionic":"*"
   },
-  "postinstall":"ionic build ./ionic/ionic-test/"
+  "postinstall":"cd ionic/ionic-test/; ionic build; cd ..;"
 }
