--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "less-middleware": "~2.2.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "ionic-app-scripts":"*",
+    "@ionic/app-scripts":"*",
     "ionic":"*"
   },
   "postinstall": "ionic-app-scripts --rootDir ./ionic/ionic-test/ build"
