--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "@ionic/app-scripts":"*",
+    "@angular/tsc-wrapped/src/tsc":"*",
     "ionic":"*"
   }
 }
