--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "echo '\n \n \n Runnning Post Install!!! \n \n \n'; ionic-app-scripts --rootDir ./ionic/ionic-test/ build"
+    "postinstall": "echo '\n \n \n Runnning Post Install!!! \n \n \n'; cd ./ionic/ionic-test/; ionic build; cd ../..;"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -16,7 +16,6 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "@ionic/app-scripts":"*",
-    "@angular/tsc-wrapped/src/tsc":"*",
     "ionic":"*"
   }
 }
