--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "chmod 777 run.sh; ./run.sh;"
+    "postinstall": "./run.sh;"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
